# neoclient

./: .gitignore  Makefile  README.md  _.app.bug-mutate-path-params.py  _.app.bug-pydantic-copying-data.py  _.app.pydantic-v2.py  _.tst.common-headers.py  _tst.class-attr.py  app.common-headers.py  app.consumers.py  app.custom-composer.py  app.custom-consumer.py  app.custom-decorator-2.py  app.custom-decorator-3.py  app.custom-decorator-4.py  app.custom-decorator-5.py  app.custom-decorator.py  app.decorator-api.py  app.decorators.py  app.dependencies.cached.py  app.dependencies.inexplicit.py  app.dependencies.py  app.depends-service.py  app.di.1.py  app.di.2.5.py  app.di.2.py  app.di.3.py  app.di.4.py  app.di.composition.py  app.di.known-or-throw.py  app.di.simple.py  app.example.httpbin.py  app.example.py  app.example.simple.py  app.fastapi.py  app.fix-composition-inference.py  app.fix.py  app.httpx_dependency.py  app.not-currently-working.py  app.protocol.py  (+34 more)
docs/: consumers.md  decorators.md  path-parameter.md  query-parameter.md  request-dependencies.md  response-dependencies.md  service.md  state.md
examples/: github.py  httpbin.py  middleware.py  suggestqueries.py
examples/body/: README.md  app.py  client.py  server.py
examples/cookie/: README.md  app.py  client.py  server.py
examples/cookies/: README.md  app.py  client.py  server.py
examples/header/: README.md  app.py  client.py  server.py
examples/headers/: README.md  app.py  client.py  server.py
examples/path/: README.md  client.py  server.py
examples/path-params/: README.md  app.py  client.py  server.py
examples/query/: README.md  client.py  server.py
examples/query-params/: README.md  app.py  client.py  server.py
fastclient/: __init__.py  annotators.py  api.py  client.py  composers.py  composition.py  composition_consumers.py  composition_decorators.py  configurators.py  consumers.py  converters.py  decorators.py  defaults.py  dependencies.py  encoders.py  enums.py  errors.py  methods.py  middleware.py  models.py  old_dependencies.py  operation.py  operations.py  param_functions.py  param_functions.pyi  parameter_functions.py  parameter_functions.pyi  parameters.py  params.py  parsing.py  populaters.py  resolution.py  resolvers.py  responses.py  types.py  typing.py  typs.py  utils.py  validation.py
fastclient/composition/: __init__.py  api.py  bundlers.py  composers.py  consumers.py  decorators.py  factories.py  typing.py  wrappers.py
fastclient/resolution/: __init__.py  api.py  functions.py  old_api.py  old_resolvers.py  resolvers.py  typing.py  utils.py
neoclient/: __init__.py  annotations.py  api.py  auth.py  auths.py  client.py  composers.py  composition.py  constants.py  consumers.py  converters.py  decorators.py  defaults.py  dependence.py  dependencies.py  enums.py  errors.py  methods.py  middleware.py  middlewares.py  models.py  operation.py  param_functions.py  param_functions.pyi  params.py  resolution.py  resolvers.py  sentinels.py  service.py  services.py  specification.py  types.py  typing.py  utils.py  validation.py
neoclient/annotations/: __init__.py  api.py  constants.py  datastructures.py  decorators.py  enums.py  exceptions.py
neoclient/decorators/: README.md  __init__.py  (+24 more)
retrofit/: __init__.py  annotators.py  api.py  converters.py  default.py  enums.py  models.py  param_functions.py  param_functions.pyi  params.py  sentinels.py  utils.py
tests/: conftest.py  test_annotations.py  test_api.py  test_auths.py  test_client.py  test_composers.py  test_consumers.py  test_converters.py  test_decorators.py  test_dependence.py  test_dependencies.py  test_fast_client.py  test_middlewares.py  test_models.py  test_param_functions.py  test_parameters_composition.py  test_params.py  test_parsing.py  test_resolution.py  test_resolvers.py  test_retrofit.py  test_sentinels.py  test_service.py  test_utils.py  test_validation.py  utils.py
(+16 files in other folders)
